--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
         <h2 class="section-title">Mentor Appreciation</h2>
         <div class="mentor-content">
             <div class="mentor-img">
-                <img src="TestimonialsPics/Image.jpg" alt="Picture of Pavan Reddy and Van">
+                <img src="TestimonialPics/Image.jpg" alt="Picture of Pavan Reddy and Van">
             </div>
             <div class="mentor-text">
                 <p>Working under Van's guidance has been an incredible experience. His wisdom, leadership, and unwavering support have been pivotal in shaping my journey. Van has not only been a mentor but a true inspiration, constantly encouraging me to strive for excellence. I'm grateful for his guidance and the invaluable lessons he has imparted, which will stay with me throughout my career.</p>
