--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         <div class="testimonials-grid">
             <div class="testimonial-item">
                 <div class="testimonial-image">
-                    <img src="Testimonials/Th.avif" alt="Testimonial from Thomas">
+                    <img src="TestimonialPics/Th.avif" alt="Testimonial from Thomas">
                 </div>
                 <h3>Thomas</h3>
                 <p>★★★★★</p>
@@ -181,7 +181,7 @@
             </div>
             <div class="testimonial-item">
                 <div class="testimonial-image">
-                    <img src="Testimonials/julia.avif" alt="Testimonial from Julia">
+                    <img src="TestimonialPics/julia.avif" alt="Testimonial from Julia">
                 </div>
                 <h3>Julia</h3>
                 <p>★★★★</p>
@@ -189,7 +189,7 @@
             </div>
             <div class="testimonial-item">
                 <div class="testimonial-image">
-                    <img src="Testimonials/Jane.jpg" alt="Testimonial from Jane">
+                    <img src="TestimonialPics/Jane.jpg" alt="Testimonial from Jane">
                 </div>
                 <h3>Jane</h3>
                 <p>★★★★★</p>
@@ -204,7 +204,7 @@
         <h2 class="section-title">Mentor Appreciation</h2>
         <div class="mentor-content">
             <div class="mentor-img">
-                <img src="Testimonials/Image.jpg" alt="Picture of Pavan Reddy and Van">
+                <img src="TestimonialPics/Image.jpg" alt="Picture of Pavan Reddy and Van">
             </div>
             <div class="mentor-text">
                 <p>Working under Van's guidance has been an incredible experience. His wisdom, leadership, and unwavering support have been pivotal in shaping my journey. Van has not only been a mentor but a true inspiration, constantly encouraging me to strive for excellence. I'm grateful for his guidance and the invaluable lessons he has imparted, which will stay with me throughout my career.</p>
